[tool.poetry]
name = "space-drive-backend"
version = "0.1.0"
description = ""
authors = ["Vladimir Alinsky <vladimir@alinsky.tech>"]
license = "GPL-3.0"

[tool.poetry.group.main.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
matplotlib = "^3.8.3"
moviepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
